# gadgetron

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  azure-pipelines.yml
.github/workflows/: docker-publish.yml
apps/gadgetron/: CMakeLists.txt  Config.cpp  Gadget.h  GadgetServerAcceptor.cpp
cmake/: FindCBLAS.cmake  FindPython3.cmake
docker/: build_incremental_images.sh
gadgets/: CMakeLists.txt
gadgets/fatwater/: FatWaterGadget.cpp
gadgets/grappa/: GrappaUnmixingGadget.cpp
gadgets/hyper/: NFFT2DGadget.cpp  gpuCSICoilEstimationGadget.cpp
gadgets/mri_core/: AccumulateFlagTrigger.cpp  AccumulateFlagTrigger.h  CMakeLists.txt  ExtractGadget.cpp  GenericReconCartesianGrappaGadget.cpp  GenericReconFieldOfViewAdjustmentGadget.cpp  GenericReconGadget.cpp  ImageAccumulatorGadget.cpp  ImageAccumulatorGadget.h  NoiseAdjustGadget.cpp  NoiseAdjustGadget.h  SimpleReconGadget.cpp
gadgets/mri_noncartesian/: CMakeLists.txt  CPUGriddingReconGadget.cpp  CPUGriddingReconGadget.h  GIRFCorrectionGadget.cpp  GIRFCorrectionGadget.h  GriddingReconGadget.cpp  GriddingReconGadget.h  GriddingReconGadgetBase.h  GriddingReconGadgetBase.hpp
gadgets/pmri/: CMakeLists.txt  NonCartesianSenseGadget.h  gpuBufferSensePrepGadget.cpp  gpuCgKtSenseGadget.cpp  gpuGenericSensePrepGadget.cpp
gadgets/python/: CMakeLists.txt
gadgets/spiral/: CMakeLists.txt  TrajectoryParameters.cpp  gpuSpiralDeblurGadget.cpp  gpuSpiralSensePrepGadget.cpp  gpuSpiralSensePrepGadget.h  (+2 more)
test/: CMakeLists.txt  hoNDArrayView_test.cpp  python_converter_test.cpp
toolboxes/: CMakeLists.txt
toolboxes/mri/pmri/: CMakeLists.txt  NonCartesianSenseOperator.h  NonCartesianSenseOperator.hpp  senseOperator.h
toolboxes/mri/pmri/cpu/: CMakeLists.txt  cpu_sense_utilities.cpp  cpu_sense_utilities.h  hoNonCartesianSenseOperator.cpp  hoNonCartesianSenseOperator.h
toolboxes/mri/pmri/gpu/: CMakeLists.txt  cuBuffer.cpp  cuNonCartesianKtSenseOperator.h  cuNonCartesianSenseOperator.cpp  cuNonCartesianSenseOperator.cu  cuNonCartesianSenseOperator.h  cuSenseOperator.h  cuSpiritBuffer.h  gpu_sense_utilities.cu  gpu_sense_utilities.h  osSenseOperator.h  spirit_calibration.cu
(+93 files in other folders)
